@@ -2,6 +2,7 @@
 
  - Fix for bug 30355: Point to the correct configuration file when adjusting permissions during post-install
  - Fix for bug 30336: Re-added LGI-0013
+ - Fix for bug 30319: Changed error message when not having access to a folder
 
 * 2013-12-16 - thorben.betten@open-xchange.com
 
